[package]
name = "brand"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
bytes = "1.6.0"
chrono = "0.4.38"
clap = { version = "4.5.7", features = ["derive"] }
image = "0.25.1"
js-sys = "0.3.69"
log = "0.4.21"
regex = "1.10.5"
serde = "1.0.203"
serde_json = "1.0.118"
sha2 = "0.10.8"
simple_logger = { version = "5.0.0", features = ["stderr"] }
wasm-bindgen = { version = "0.2.92", features = ["serde_json"] }
wasm-logger = "0.2.0"
winnow = "0.6.13"

[dependencies.web-sys]
version = "0.3.69"
features = ["CssStyleDeclaration", "Document", "DomRect", "DomTokenList", "Element", "FileSystemDirectoryEntry", "FileSystemFileEntry", "History", "HtmlCollection", "HtmlElement", "HtmlInputElement", "IntersectionObserver", "IntersectionObserverEntry", "IntersectionObserverInit", "KeyEvent", "KeyboardEvent", "Location", "MouseEvent", "Node", "NodeList", "ScrollBehavior", "ScrollToOptions", "Storage", "UrlSearchParams", "Window", "FileSystemDirectoryReader", "FileSystem", "InputEvent", "FileList", "File", "FileCallback", "FileReader"]

[[bin]]
name = "exif-writer"
test = false
bench = false
