[package]
name = "brand"
version = "0.1.0"
edition = "2021"

[dependencies]
async-channel = "2.5.0"
base64 = "0.22.1"
bytes = "1.6.0"
chrono = "0.4.38"
clap = { version = "4.5.7", features = ["derive"] }
console_error_panic_hook = "0.1.7"
console_log = { version = "1.0.0", features = ["color"] }
futures = "0.3.31"
image = { git = "https://github.com/image-rs/image", version = "0.25.6" }
instant = { version = "0.1.13", features = ["wasm-bindgen"] }
itertools = "0.14.0"
js-sys = "0.3.69"
leaflet = { version = "0.4.1", path = "../leaflet-rs" }
log = "0.4.21"
num-rational = "0.4.2"
regex = "1.10.5"
serde = { version = "1.0.203", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.118"
serde_with = { version = "3.8.3", features = ["chrono_0_4"] }
sha2 = "0.10.8"
simple_logger = { version = "5.0.0", features = ["stderr"] }
tar = "0.4.44"
thiserror = "2.0.14"
tiff = { version = "0.10.0", git = "https://github.com/image-rs/image-tiff/", branch = "main" }
wasm-bindgen = { version = "0.2.92", features = ["serde_json"] }
wasm-bindgen-futures = "0.4.50"
wasm-logger = "0.2.0"
web-fs = "0.2.7"
winnow = "0.6.13"

[dependencies.web-sys]
version = "0.3.69"
features = ["CssStyleDeclaration", "Document", "DomRect", "DomTokenList", "Element", "FileSystemDirectoryEntry", "FileSystemFileEntry", "History", "HtmlCollection", "HtmlElement", "HtmlInputElement", "IntersectionObserver", "IntersectionObserverEntry", "IntersectionObserverInit", "KeyEvent", "KeyboardEvent", "Location", "MouseEvent", "Node", "NodeList", "ScrollBehavior", "ScrollToOptions", "Storage", "UrlSearchParams", "Window", "FileSystemDirectoryReader", "FileSystem", "InputEvent", "FileList", "File", "FileCallback", "FileReader", "Blob", "Url", "BlobPropertyBag", "Worker", "WorkerOptions", "WorkerType", "DedicatedWorkerGlobalScope", "ErrorEvent"]

#[lib]
#name = "brand"
#crate-type = ["cdylib", "rlib"]

[[bin]]
name = "exif-writer"
test = false
bench = false

[[bin]]
name = "resize"
test = false
bench = false

[[bin]]
name = "split"
test = false
bench = false

[dev-dependencies]
insta = { version = "1.43.1", features = ["json"] }
